# FirebaseAuthentication

./: .gitignore  CMakeLists.txt  README.md  main.cpp  vcpkg.json
App/: FirebaseApp.cpp  FirebaseApp.h  FirebaseCloudImpl.cpp  FirebaseCloudImpl.h  FirebaseManager.cpp  FirebaseManager.h
App/Authentication/: AppAuthStateListener.cpp  AppAuthStateListener.h  AppAuthentication.cpp  AppAuthentication.h
App/Authentication/AuthProvider/: AbstractExternalAuthProvider.h  AbstractInternalAuthProvider.h  EmailPwAuthProvider.cpp  EmailPwAuthProvider.h  GoogleAuthProvider.cpp  GoogleAuthProvider.h  GoogleOauth.cpp  GoogleOauth.h
App/Authentication/Utils/: AuthUtils.h
Interface/: IFirebaseCloud.h
Utils/: Logging.h
